@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed a problem with items not getting restored when breaking and placing blocks
+
 1.18-4.0.4:
 - Fixed a bad capability in RFToolsUtility
 
